# chronovault

./: CMakeLists.txt  README-TR.md  README.md  debug_json.cpp  tcfs.bat  tcfs.ps1
cmake/: CompilerWarnings.cmake  Dependencies.cmake  StaticAnalyzers.cmake
include/tcfs/: CryptoProvider.hpp  Errors.hpp  Policy.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/libtcfs/: CMakeLists.txt
src/libtcfs/core/: Errors.cpp  Policy.cpp
src/libtcfs/crypto/: OpenSSLCryptoProvider.cpp
test_store/: config.json  demo_mesaj.txt.tcfs  test_message.txt.tcfs
tests/: CMakeLists.txt  test_crypto.cpp  test_errors.cpp  test_policy.cpp
